@@ -17,7 +17,6 @@ namespace SphereSim
         const char* address = "127.0.0.1";
         unsigned short serverSendPort = 8764;
         unsigned short serverRecvPort = 8765;
-        char startByte = '<', endByte = '>';
     }
 
 }
